# Compaki

./: .gitignore  DEMO.md  README.md  package-lock.json  package.json
.claude/: launch.json
apps/api/: package-lock.json  package.json  railway.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/scripts/: deploy.ts  load-env.ts  seed-demo.ts
apps/api/src/: env.ts  index.ts
apps/api/src/lib/: passwords.ts  products.ts  session.ts  slug.ts
apps/api/src/routes/: auth.ts  balance.ts  demo.ts  marketplaces.ts  me.ts  orders.ts  products.ts  sales.ts
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  page.tsx
apps/web/src/components/: cart.tsx  (+3 more)
contracts/: Cargo.toml
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs  test.rs
contracts/marketplace/test_snapshots/test/: create_marketplace_validates_bps_sum.1.json  happy_path_purchase_splits_correctly.1.json  initialize_only_once.1.json  marketplace_ids_increment.1.json  purchase_rejects_unknown_marketplace.1.json  purchase_rejects_unregistered_vendor.1.json  purchase_rejects_zero_and_negative_amounts.1.json  register_vendor_requires_existing_marketplace.1.json  rounding_remainder_goes_to_community_fund.1.json
prisma/: schema.prisma
prisma/migrations/20260702053819_onboarding_fields/: migration.sql
scripts/: demo-purchase.ts  deploy.ts
src/app/: layout.tsx
src/app/dashboard/: page.tsx
src/components/: live-balance.tsx  shell.tsx
src/lib/: session.ts
src/lib/db/: types.ts
src/lib/stellar/: config.ts  contract.ts  index.ts
(+48 files in other folders)
