# Soroban contracts workspace for Compaki.
# One `marketplace` contract supports multiple marketplace instances keyed by
# marketplace_id — cheaper and simpler than a factory for the demo.

[workspace]
resolver = "2"
members = ["marketplace"]

[workspace.dependencies]
# Pinned to major 21 to match the installed stellar-cli (soroban-env 21).
soroban-sdk = "21"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
